--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "express": "^4.18.2",
     "mongoose": "^6.6.5",
     "node-fetch": "^2.6.7",
-    "node-fetch-commonjs": "^3.2.4"
+    "node-fetch-commonjs": "^3.2.4",
+    "whatsapp-web.js": "^1.18.0"
   }
 }
