--- a/package.json
+++ b/package.json
@@ -6,6 +6,10 @@
   "scripts": {
     "start": "node index.js"
   },
+  "engines" : { 
+    "npm" : ">=8.0.0 <9.0.0",
+    "node" : ">=14.0.0 <16.0.0"
+  },
   "author": "",
   "license": "ISC",
   "dependencies": {
