--- a/package.json
+++ b/package.json
@@ -4,11 +4,12 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "start": "node index.js"
+    "start": "node index.js",
+    "dev": "nodemon index.js"
   },
-  "engines" : { 
-    "npm" : ">=8.0.0 <9.0.0",
-    "node" : ">=14.0.0 <16.0.0"
+  "engines": {
+    "npm": ">=8.0.0 <9.0.0",
+    "node": ">=14.0.0 <16.0.0"
   },
   "author": "",
   "license": "ISC",
@@ -19,6 +20,10 @@
     "mongoose": "^6.6.5",
     "node-fetch": "^2.6.7",
     "node-fetch-commonjs": "^3.2.4",
+    "qrcode-terminal": "^0.12.0",
     "whatsapp-web.js": "^1.18.0"
+  },
+  "devDependencies": {
+    "nodemon": "^2.0.20"
   }
 }
