--- a/package.json
+++ b/package.json
@@ -5,7 +5,9 @@
   "main": "index.js",
   "scripts": {
     "start": "node index.js",
-    "dev": "nodemon index.js"
+    "dev": "nodemon index.js",
+    "api": "node API/Api.js",
+    "api-D": "nodemon API/Api.js"
   },
   "engines": {
     "npm": ">=8.0.0 <9.0.0",
