--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "dotenv": "^16.0.3",
     "ejs": "^3.1.8",
     "express": "^4.18.2",
+    "fotmob": "^1.0.4",
     "mongoose": "^6.6.5",
     "node-fetch": "^2.6.7",
     "node-fetch-commonjs": "^3.2.4",
