--- a/package.json
+++ b/package.json
@@ -25,7 +25,8 @@
     "node-fetch": "^2.6.7",
     "node-fetch-commonjs": "^3.2.4",
     "qrcode-terminal": "^0.12.0",
-    "whatsapp-web.js": "^1.18.0"
+    "whatsapp-web.js": "^1.18.0",
+    "wwebjs-mongo": "^1.1.0"
   },
   "devDependencies": {
     "nodemon": "^2.0.20"
