--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "express": "^4.18.2",
     "fotmob": "^1.0.4",
     "mongoose": "^6.6.5",
+    "node-cache": "^5.1.2",
     "node-fetch": "^2.6.7",
     "node-fetch-commonjs": "^3.2.4",
     "qrcode-terminal": "^0.12.0",
